[project]
name = "road"
version = "0.0.0"
description = "An open-source platform to shape and reward open-source contributions. Create bounties, prioritize features, and collaborate together."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"